--- a/eclipse-aggregate-gae/war/logout.html
+++ b/eclipse-aggregate-gae/war/logout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" href="favicon.ico"/>
 <title>Log out of Aggregate</title>
 <link type="text/css" rel="stylesheet" href="AggregateUI.css">
